// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ViewLayout > should render a ViewLayout 1`] = `
<div
  class="_container_bd3dff"
>
  <div
    class="_header_bd3dff"
  >
    <div
      class="_element-container_bd3dff _left_bd3dff"
    >
      <span>
        left item
      </span>
    </div>
    <div
      class="_element-container_bd3dff _middle_bd3dff"
    >
      <span>
        middle item
      </span>
    </div>
    <div
      class="_element-container_bd3dff _right_bd3dff"
    >
      <span>
        right item
      </span>
    </div>
  </div>
  <div
    class="_element-container_bd3dff _body_bd3dff"
  >
    <whateverbodyelement />
  </div>
</div>
`;

exports[`ViewLayout should render a ViewLayout 1`] = `
<div
  class="theme-container"
>
  <div
    class="theme-header"
  >
    <div
      class="theme-element-container theme-left"
    >
      <span>
        left item
      </span>
    </div>
    <div
      class="theme-element-container theme-middle"
    >
      <span>
        middle item
      </span>
    </div>
    <div
      class="theme-element-container theme-right"
    >
      <span>
        right item
      </span>
    </div>
  </div>
  <div
    class="theme-element-container theme-body"
  >
    <whateverbodyelement />
  </div>
</div>
`;
